# Panificadora

./: .env.example  .gitignore  Cargo.toml  Makefile  QUICKSTART.md  README.md  STATUS.md  docker-compose.yml  run.ps1
.github/workflows/: azure-static-web-apps-icy-coast-0a55fa71e.yml
delpopolo-api/: Cargo.toml
delpopolo-api/src/: avila_logger.rs  main.rs  state.rs
delpopolo-api/src/dto/: mod.rs
delpopolo-api/src/handlers/: mod.rs  products.rs
delpopolo-api/src/middleware/: mod.rs
delpopolo-api/src/routes/: auth.rs  customers.rs  health.rs  inventory.rs  mod.rs  orders.rs  products.rs  suppliers.rs  webhooks.rs
delpopolo-chatbot/: Cargo.toml
delpopolo-chatbot/src/: context.rs  intent.rs  lib.rs  nlp.rs  responses.rs
delpopolo-core/: Cargo.toml
delpopolo-core/src/: error.rs  lib.rs  result.rs  traits.rs
delpopolo-domain/: Cargo.toml
delpopolo-domain/src/: enums.rs  lib.rs  repositories.rs
delpopolo-domain/src/entities/: campaign.rs  customer.rs  inventory.rs  mod.rs  notification.rs  order.rs  payment.rs  product.rs  supplier.rs  turnstile.rs  user.rs
delpopolo-domain/src/value_objects/: address.rs  cnpj.rs  cpf.rs  email.rs  mod.rs  money.rs  phone.rs
delpopolo-infrastructure/: Cargo.toml
delpopolo-infrastructure/migrations/: 20250116000001_initial_schema.sql  20250116000002_campaigns_notifications.sql
delpopolo-infrastructure/src/: cache.rs  config.rs  database.rs  lib.rs  queue.rs
delpopolo-infrastructure/src/repositories/: customer_repository.rs  inventory_repository.rs  mod.rs  order_repository.rs  product_repository.rs  supplier_repository.rs
delpopolo-integrations/: Cargo.toml
delpopolo-integrations/src/: lib.rs
delpopolo-integrations/src/ifood/: client.rs  mod.rs  models.rs  webhook.rs
delpopolo-integrations/src/stone/: client.rs  mod.rs
delpopolo-integrations/src/whatsapp/: client.rs  mod.rs  templates.rs  webhook.rs
delpopolo-inventory/: Cargo.toml
delpopolo-inventory/src/: alerts.rs  lib.rs  replenishment.rs  service.rs
delpopolo-marketing/: Cargo.toml
delpopolo-marketing/src/: lib.rs
delpopolo-nfe/: Cargo.toml
delpopolo-nfe/src/: importer.rs  lib.rs  models.rs  parser.rs  validator.rs
delpopolo-notifications/: Cargo.toml
delpopolo-notifications/src/: email.rs  lib.rs  push.rs  service.rs  sms.rs  templates.rs
delpopolo-payments/: Cargo.toml
delpopolo-payments/src/: lib.rs
delpopolo-pos/: Cargo.toml
delpopolo-pos/src/: lib.rs
delpopolo-suppliers/: Cargo.toml
delpopolo-suppliers/src/: lib.rs
delpopolo-turnstile/: Cargo.toml
delpopolo-turnstile/src/: lib.rs
delpopolo-web/: Cargo.toml
delpopolo-web/src/: lib.rs
delpopolo-workers/: Cargo.toml
delpopolo-workers/src/: lib.rs
