[package]
name = "delpopolo-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "delpopolo-api"
path = "src/main.rs"

[dependencies]
delpopolo-core = { path = "../delpopolo-core" }
delpopolo-domain = { path = "../delpopolo-domain" }
delpopolo-infrastructure = { path = "../delpopolo-infrastructure" }
delpopolo-integrations = { path = "../delpopolo-integrations" }
delpopolo-chatbot = { path = "../delpopolo-chatbot" }
delpopolo-inventory = { path = "../delpopolo-inventory" }
delpopolo-nfe = { path = "../delpopolo-nfe" }
delpopolo-notifications = { path = "../delpopolo-notifications" }

tokio = { workspace = true }
actix-web = { workspace = true }
actix-cors = { workspace = true }
actix-rt = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-actix-web = { workspace = true }
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
dotenvy = { workspace = true }
validator = { workspace = true }
anyhow = { workspace = true }
