[package]
name = "delpopolo-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "delpopolo-api"
path = "src/main.rs"

[dependencies]
delpopolo-core = { path = "../delpopolo-core" }
delpopolo-domain = { path = "../delpopolo-domain" }
delpopolo-infrastructure = { path = "../delpopolo-infrastructure" }

tokio = { workspace = true }
actix-web = { workspace = true }
actix-cors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-actix-web = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
