[package]
name = "delpopolo-domain"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
delpopolo-core = { path = "../delpopolo-core" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
validator = { workspace = true }
thiserror = { workspace = true }
