[package]
name = "delpopolo-infrastructure"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
delpopolo-core = { path = "../delpopolo-core" }
delpopolo-domain = { path = "../delpopolo-domain" }

tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

# Database
sqlx = { workspace = true }

# Cache
redis = { workspace = true }

# Message Queue
lapin = { workspace = true }

# Config
config = { workspace = true }
dotenvy = { workspace = true }
