[package]
name = "delpopolo-infrastructure"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
config.workspace = true
delpopolo-core = { path = "../delpopolo-core" }
dotenvy.workspace = true
serde_json.workspace = true
sqlx = { workspace = true }
thiserror.workspace = true
tokio = { workspace = true }
tracing.workspace = true
uuid.workspace = true
