[package]
name = "delpopolo-pos"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
delpopolo-core = { path = "../delpopolo-core" }
delpopolo-domain = { path = "../delpopolo-domain" }

serde = { workspace = true }
uuid = { workspace = true }
