[package]
name = "delpopolo-web"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = { workspace = true }
yew-router = "0.18"
gloo = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = ["Window", "Document", "HtmlElement"] }
serde = { workspace = true }
serde_json = { workspace = true }
gloo-net = "0.6"
