[package]
name = "delpopolo-workers"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
delpopolo-core = { path = "../delpopolo-core" }
delpopolo-domain = { path = "../delpopolo-domain" }

tokio = { workspace = true }
serde = { workspace = true }
